# QUBOModule

./: .pylintrc  README.md  setup.cfg  tests.py
src/qubo_module/: boolean_set_module.py  brute_force_solver.py  tile.py
tests/: test_boolean_set_module.py  test_brute_force_solver.py  test_fully_connected_tile.py
