[metadata]
name = qubo-module
version = 1.0.0
author = Dane Henshall
author_email = dslh.4cad@gmail.com
description = A library for decomposing a Quadratic Unconstrainted Binary Optimization problem into small, testable modules
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/4cad/QUBOModule
license_files = LICENSE
project_urls =
    Docs = https://github.com/4cad/QUBOModule/blob/main/README.md
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

[tool:pytest]
minversion = 6.0
testpaths =
    tests